# wallpaper-generator

./: pyproject.toml
